<resources>
    <string name="app_name">Viavoc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="mene_home">Home</string>
    <string name="menu_last_files">Open last</string>
    <string name="menu_guides">Tutorials</string>
    <string name="menu_share">Share</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_feedback">Leave your feedback</string>
    <string name="menu_report">Report</string>
    <string name="menu_file_save">Save file</string>
    <string name="menu_new_file">New file</string>
    <string name="menu_settings">Settings</string>

    <string name="speech_prompt">Say what you wanted to change&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <string name="send_button">Send</string>
    <string name="email_hint" translatable="false">E-mail</string>
    <string name="problem_description">Describe here the problem you encountered while using this app</string>
    <string name="required_field">* Required field</string>

    <string name="bug_found">I found a bug using the following commands</string>
    <string name="inform_me">I\'d like to be informed when the bug is removed.</string>
    <string name="choose_app">Choose the app</string>

    <string name="new_file">New File</string>
    <string name="enter_package_name">Enter the package name here</string>
    <string name="enter_file_name">Enter the file name here</string>
    <string name="or_say">or tell me it:</string>
    <string name="finish_btn">OK</string>
    <string name="say_file_name">Say the name of new file</string>
    <string name="hello">Hello!</string>

    <string name="convert_in">"Convert "</string>
    <string name="cannot_convert">Too low number of words to convert</string>
    <string name="error_in_command">Error in the commands sequence. Cannot convert</string>
    <string name="main_exist">Main is already exist!</string>
    <string name="file">File </string>
    <string name="was_saved"> was successfully saved in the Viavoc folder</string>
    <string name="i_use_viavoc">"I use Viavoc! Try it yourself: "</string>

    <string-array name="languages">
        <item>English</item>
        <item>Українська</item>
    </string-array>
    <string name="language">Language:</string>
    <string name="theme">Theme:</string>
    <string-array name="themes">
        <item>Android Studio</item>
        <item>Dracula</item>
        <item>Monokai</item>
        <item>Idea</item>
        <item>Github</item>
        <item>Agate</item>
        <item>Docco</item>
    </string-array>
</resources>
