<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/mene_home"/>
        <item
            android:id="@+id/nav_save_file"
            android:icon="@drawable/ic_menu_file_save"
            android:title="@string/menu_file_save"/>
        <item
            android:id="@+id/nav_new_file"
            android:icon="@drawable/ic_menu_new_file"
            android:title="@string/menu_new_file"/>
        <item
            android:id="@+id/nav_guides"
            android:icon="@drawable/ic_menu_guides"
            android:title="@string/menu_guides" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report_problem"
            android:title="@string/menu_report" />
    </group>

</menu>
